# rojlib-jni

./: CMakeLists.txt  LICENSE  main.h
.github/workflows/: build_libcpp.yml
lz/: LZ_Jni.cpp  LZ_Jni.h
win64/: GuiUtil.hpp
